Make responsive background

--- a/neural/src/App.css
+++ b/neural/src/App.css
@@ -2,12 +2,12 @@
 
 
 .App {
- 
-  background: rgb(13,0,36);
-  /* background: linear-gradient(90deg, rgba(13,0,36,1) 0%, rgba(228,32,85,1) 6%, rgba(85,0,255,1) 60%); */
-background-image: url('./Images/neuralhqbackground.png');
+
+  background-image: url('./Images/neuralhqbackground.png');
   height: 100vh;
-background-size: cover;
+  background-size: cover;
+  background-repeat: none;
+  background-position: center;
   margin: 0;
   overflow: hidden;
   font-family: "Protest Revolution", sans-serif;
@@ -22,11 +22,7 @@ background-size: cover;
   text-align: center;
 }
 
- .site{
-  font-size:65px ;
-  color: #fff;
-  
- }
+
  .coming-soon {
   font-size: 85px;
   white-space: nowrap; /* Prevent text from wrapping */
@@ -46,73 +42,34 @@ background-size: cover;
 
 
 
-.kinetic {
-  height: 80px;
-  position: relative;
-  width: 80px;
-  margin-left: 30px;
-}
-
-.kinetic::after,
-.kinetic::before {
-  animation: rotateA 2s linear infinite 0.5s;
-  border: 50px solid transparent;
-  border-bottom-color: #fff;
-  content: "";
-  height: 0;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 0;
-}
-
-.kinetic::before {
-  animation: rotateB 2s linear infinite;
-  transform: rotate(90deg);
-}
-
-@keyframes rotateA {
-  0%,
-  25% {
-    transform: rotate(0deg);
+@media screen and (max-width:1200px) and (min-width:768px){
+  .main{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -60%);
+    text-align: center;
   }
-  50%,
-  75% {
-    transform: rotate(180deg);
-  }
-  100% {
-    transform: rotate(360deg);
+  .coming-soon {
+    font-size: 65px;
+    white-space: nowrap; /* Prevent text from wrapping */
+    overflow: hidden;
+    color: #fff;
   }
 }
-
-@keyframes rotateB {
-  0%,
-  25% {
-    transform: rotate(90deg);
+@media screen and (max-width:767px) and (min-width:320px){
+  .main{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -60%);
+    text-align: center;
   }
-  50%,
-  75% {
-    transform: rotate(270deg);
-  }
-  100% {
-    transform: rotate(450deg);
-  }
-}
+  .coming-soon {
+   font-size: 45px;
+    white-space: nowrap; /* Prevent text from wrapping */
+     overflow: hidden;
+    color: #fff; 
 
-.btn{
-  padding: 12px 20px;
-  border-radius: 20px;
-  color: #fff;
-  font-weight: 600;
-  font-size: 20px;
-  background: linear-gradient(90deg, rgba(13,0,36,1) 0%, rgba(228,32,85,1) 6%, rgba(85,0,255,1) 60%);
-}
-.social-media{
-  display: flex;
-  justify-content: space-around;
-
-}
-.social-media img{
-  width:3rem;
-  height:3rem
+  }
 }
