--- a/neural/src/App.css
+++ b/neural/src/App.css
@@ -1,75 +1,9 @@
-
-
-
-.App {
-
-  background-image: url('./Images/neuralhqbackground.png');
-  height: 100vh;
-  background-size: cover;
-  background-repeat: none;
-  background-position: center;
-  margin: 0;
-  overflow: hidden;
-  font-family: "Protest Revolution", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-.main{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -60%);
-  text-align: center;
-}
-
-
- .coming-soon {
-  font-size: 85px;
-  white-space: nowrap; /* Prevent text from wrapping */
-  overflow: hidden;
-  color: #fff;
-}
-
-.coming-soon.bordered {
-  border-right: .15em solid orange; /* Simulate cursor */
-  animation: typing 4s steps(40, end) forwards; /* Adjust duration and steps as needed */
-}
-
-@keyframes typing {
-  from { width: 0; }
-  to { width: 100%; }
-}
-
-
-
-@media screen and (max-width:1200px) and (min-width:768px){
-  .main{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -60%);
+.name_of_website{
+    font-family: Baumans;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: right;
+    color:#374357;
     text-align: center;
-  }
-  .coming-soon {
-    font-size: 65px;
-    white-space: nowrap; /* Prevent text from wrapping */
-    overflow: hidden;
-    color: #fff;
-  }
-}
-@media screen and (max-width:767px) and (min-width:320px){
-  .main{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -60%);
-    text-align: center;
-  }
-  .coming-soon {
-   font-size: 45px;
-    white-space: nowrap; /* Prevent text from wrapping */
-     overflow: hidden;
-    color: #fff; 
-
-  }
 }
