--- a/neural/src/index.css
+++ b/neural/src/index.css
@@ -1,13 +1,30 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Baumans", system-ui!important;
+  font-weight: 400;
+  font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+::-webkit-scrollbar {
+  width: 8px; /* Width of the scrollbar */
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  /* background:linear-gradient(120deg, #5be3ff, #66e5f6 30%, #bdf2b4 70%, #fffc83);  */
+  background: #fff;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background:linear-gradient(90deg, #203B60 0%, #4C648B 100%)
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  ::-webkit-scrollbar-thumb:hover {
+    background: #004d40; /* Darker green scrollbar handle color on hover */
+  }
 }
