remove border in generative ai section

--- a/neural/src/Components/Footer/Footer.css
+++ b/neural/src/Components/Footer/Footer.css
@@ -182,8 +182,9 @@
        
      }
        .footerlinks_components{
+        margin: auto;
          margin-top: 40px;
-        
+         
          
          
         
