--- a/neural/src/Components/HomeComponents/Introduction/Introduction.css
+++ b/neural/src/Components/HomeComponents/Introduction/Introduction.css
@@ -1,4 +1,8 @@
 
+*{
+  margin: 0px;
+  padding: 0px;
+}
 .introduction_container{
     margin: auto;
     display: flex;
@@ -13,6 +17,8 @@
 .introduction_inner_container{
   width:60%;
   padding: 10px 0px 10px 40px;
+  
+  margin: 0px;
  
   
 
@@ -34,7 +40,10 @@
     font-style: normal;
     margin-bottom: 15px; 
     color:#4D658D;
-    letter-spacing: 2px;  
+   
+    
+     
+    
   }
   .artificial_intelligence {
     font-size: 90px;
@@ -44,14 +53,14 @@
     font-style: normal;
     line-height: 120px;
     color: #1E3A5F;
-    margin-top: -20px;
+    
     
     
     width: 100%;
     
    
   }
-  
+
   .Introduction_description {
     font-family: Lato, sans-serif;
     font-size: 24px;
@@ -59,7 +68,8 @@
     line-height: 28.8px;
     text-align: left;
     color:#374357;
-    margin-top: -60px;
+    height: 50px;
+    
     
   }
   .introduction_contact_us{
@@ -162,18 +172,24 @@ font-weight: 400;
     .introduction_container{
         margin: auto;
         flex-direction: column-reverse;
-        justify-content: space-between;
+        justify-content: center;
         padding: 0px;
-        height:90%;
+        height:auto;
         padding: 80px 0px;
+        margin-top: -20px;
+      
         
        }
      
        .introduction_img{
         width:100%;
         margin-top: 0px;
-        margin-top: 60px;
+        
+        height: 10%;
+        
       }
+    
+      
      .introduction_inner_container{
       
       width: 100%;
@@ -236,73 +252,5 @@ font-weight: 400;
         line-height: 28.8;
          }
  
-    
-}
-@media screen and (max-width:320px) {
-    .introduction_container{
-        margin: auto;
-        flex-direction: column-reverse;
-        justify-content: space-between;
-        padding: 50px 19px;
-        height:100%
-        
-    }
-    .introduction_inner_container{
-      width:100%;
-      margin-top: 90px;
-   
-    }
-    .powering_transformation_with {
-        font-size: 24px;
-        font-weight: 400;
-        text-align: left;
-        font-family: "Lato", sans-serif;
-        font-style: normal;
-     
-        ; /* Add margin bottom to create space between text */
-        color:#4D658D;
-        
-        
-      }
-      
-      .artificial_intelligence {
-        font-size: 34px;
-        font-weight: 400;
-        text-align: left;
-        font-family: "Lato", sans-serif;
-        font-style: normal;
-        
-        margin-top: -20px; /* Add margin bottom to create space between text */
-        color:#1E3A5F;
-        margin-top: 10px;
-       
-        
-      }
-      
-      .Introduction_description {
-        font-family: Lato, sans-serif;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 28.8px;
-        text-align: left;
-       
-        margin-top: 20px; /* Add margin bottom to create space between text */
-        color:#374357
-      }
-      .introduction_contact_us{
-        width: 160px;
-        height: 40px;
-
-        gap: 0px;
-        border: 1px 0px 0px 0px;
-       
-      }
-      .introduction_img{
-        width:100%;
-        margin-top: 0px;
-        margin-top: 60px;
-        
-       
-      }
     
 }
