--- a/neural/src/Components/HomeComponents/Introduction/Introduction.css
+++ b/neural/src/Components/HomeComponents/Introduction/Introduction.css
@@ -7,7 +7,7 @@
     margin: auto;
     display: flex;
     justify-content: space-between;
-    padding: 50px 20px;
+    padding: 50px 10px;
     height:100vh;
     align-items: center;
     
@@ -16,7 +16,7 @@
 }
 .introduction_inner_container{
   width:60%;
-  padding: 10px 0px 10px 40px;
+  padding: 10px 0px 10px 20px;
   
   margin: 0px;
  
@@ -33,7 +33,7 @@
   height:100%
 }
 .powering_transformation_with {
-    font-size: 60px;
+    font-size: 3.75em;
     font-weight: 400;
     text-align: left;
     font-family: "Lato", sans-serif;
@@ -63,7 +63,7 @@
 
   .Introduction_description {
     font-family: Lato, sans-serif;
-    font-size: 24px;
+    font-size: 1.5em;
     font-weight: 400;
     line-height: 28.8px;
     text-align: left;
@@ -104,7 +104,7 @@ font-weight: 400;
       
       flex-direction: column-reverse;
       align-items: center; /* Center items horizontally */
-      padding: 50px 20px;
+      padding: 50px 0px;
       }
 
 
@@ -163,7 +163,7 @@ font-weight: 400;
     
   }
   .introduction_contact_us_text{
-    font-size: 25px;
+    font-size: 1.5em;
   }
 
 }
@@ -175,8 +175,8 @@ font-weight: 400;
         justify-content: center;
         padding: 0px;
         height:auto;
-        padding: 80px 0px;
-        margin-top: -20px;
+        padding: 0px 0px;
+        border: 2px solid red;
       
         
        }
@@ -184,8 +184,8 @@ font-weight: 400;
        .introduction_img{
         width:100%;
         margin-top: 0px;
+        border: 2px solid green;
         
-        height: 10%;
         
       }
     
@@ -225,7 +225,7 @@ font-weight: 400;
       
       .Introduction_description {
         font-family: Baumans!important;
-        font-size: 16px;
+        /* font-size: 16px; */
         font-weight: 400;
         line-height: 28.8px;
         text-align: left;
