--- a/neural/src/Components/HomeComponents/Introduction/Introduction.css
+++ b/neural/src/Components/HomeComponents/Introduction/Introduction.css
@@ -137,7 +137,7 @@ font-weight: 400;
   .Introduction_description{
     /* text-align: center; */
     font-family: Baumans,"sans-sarif";
-    font-size: 35px;
+    
     line-height: 1.2em;
     margin-top: 20px;
     
@@ -168,23 +168,21 @@ font-weight: 400;
 
 }
 
-@media screen and (max-width:767px) {
+@media screen and (max-width:767px) and (min-width:320px) {
     .introduction_container{
         margin: auto;
         flex-direction: column-reverse;
         justify-content: center;
-        padding: 0px;
-        height:auto;
-        padding: 0px 0px;
-        border: 2px solid red;
-      
         
+        padding: 15px 0px;
        }
      
        .introduction_img{
         width:100%;
         margin-top: 0px;
-        border: 2px solid green;
+        
+        
+       
         
         
       }
@@ -196,7 +194,7 @@ font-weight: 400;
       padding: 0px;
      }
     .powering_transformation_with {
-        font-size: 20px;
+        font-size: 1.25em;
         font-weight: 400;
         letter-spacing: 0px;
         text-align: left;
@@ -225,7 +223,91 @@ font-weight: 400;
       
       .Introduction_description {
         font-family: Baumans!important;
-        /* font-size: 16px; */
+        font-size: 1em;
+        font-weight: 400;
+        line-height: 28.8px;
+        text-align: left;
+        letter-spacing: 0px;
+        margin-top: 16px!important; /* Add margin bottom to create space between text */
+        color:#0F1C2E;
+        width:95%;
+        margin: auto;
+       
+        
+      }
+      .introduction_contact_us{
+        width: 160px;
+        height: 40px;
+        margin-left: 10px;
+        gap: 0px;
+        border: 1px 0px 0px 0px;
+      
+        color:#0F1C2E
+      }
+      .introduction_contact_us_text{
+        text-align: center;
+        font-size: 16px;
+        line-height: 28.8;
+         }
+ 
+    
+}
+@media screen and (max-width:320px) {
+    .introduction_container{
+        margin: auto;
+        flex-direction: column-reverse;
+        justify-content: center;
+        
+        padding: 65px 0px;
+       }
+     
+       .introduction_img{
+        width:100%;
+        margin-top: 0px;
+        
+        
+       
+        
+        
+      }
+    
+      
+     .introduction_inner_container{
+      
+      width: 100%;
+      padding: 0px;
+     }
+    .powering_transformation_with {
+        font-size: 1.25em;
+        font-weight: 400;
+        letter-spacing: 0px;
+        text-align: left;
+        font-family: "Lato", sans-serif;
+        font-style: normal;
+        color:#4D658D;
+        margin: auto;
+         
+         width: 95%;
+         
+        }
+      
+      .artificial_intelligence {
+      font-size: 1.5em;
+      line-height: 40.8;
+       width: 95%;
+       margin: auto;
+       letter-spacing: 1.2px;
+       margin-top: 10px;
+       font-family: Banumas;
+       color: #1E3A5F;
+       padding: 0px;
+       line-height: 30px;
+        
+      }
+      
+      .Introduction_description {
+        font-family: Baumans!important;
+        font-size: 1em;
         font-weight: 400;
         line-height: 28.8px;
         text-align: left;
