--- a/neural/src/Components/HomeComponents/Introduction/Introduction.css
+++ b/neural/src/Components/HomeComponents/Introduction/Introduction.css
@@ -172,7 +172,8 @@ font-weight: 400;
     .introduction_container{
         margin: auto;
         flex-direction: column-reverse;
-        justify-content: center;
+        
+        height: auto;
         
        
        }
@@ -180,6 +181,7 @@ font-weight: 400;
        .introduction_img{
         width:100%;
         margin-top: 0px;
+        
         
         
        
@@ -194,7 +196,7 @@ font-weight: 400;
       padding: 0px;
      }
     .powering_transformation_with {
-        font-size: 1.25em;
+        font-size: 1.25rem;
         font-weight: 400;
         letter-spacing: 0px;
         text-align: left;
@@ -208,7 +210,7 @@ font-weight: 400;
         }
       
       .artificial_intelligence {
-      font-size: 34px;
+      font-size: 1.5rem;
       line-height: 40.8;
        width: 95%;
        margin: auto;
