--- a/neural/src/Components/HomeComponents/AboutUSComponents/AboutUsComponent.css
+++ b/neural/src/Components/HomeComponents/AboutUSComponents/AboutUsComponent.css
@@ -11,7 +11,7 @@
   
     width:60%;
     margin:auto;
-   
+   height: auto;
 }
 
 
@@ -72,20 +72,19 @@
  
 }
 
-.about_us_know_more:hover {
-    border-radius: 0px 72px 0px 72px;
-}
+
 
 @media screen and (max-width:1124px) and (min-width:768px) {
     .aboutus_inner_container{
         width: 90%;
         margin: auto;
+        height: auto;
     }
     .aboutus_context_description{
         font-family: Lato;
-        font-size: 45px;
+        font-size: 2.0rem;
         font-weight: 400;
-        line-height: 72px;
+        line-height: 3rem;
         text-align: left;
         color:#CEE7FE
     
@@ -103,22 +102,36 @@
     }
     .about_us_know_more_text {
         font-family: Lato;
-        font-size: 26px;
+        font-size: 1.6rem;
         font-weight: 400;
-        line-height: 24px;
+        line-height:1rem;
         text-align: center; /* Text alignment declared once */
         color: #ACC2EE;
         transition: border-radius 0.3s ease;
     }
     .aboutus_our_team_description{
-        font-size: 32px;
-        line-height: 52px;
+        font-size: 1.4rem;
+        line-height:2rem;
+    }
+    .about_us_know_more{
+        margin-top: 20px;
+        width: 200px;
+        height: 40px;
+    }
+    .about_us_know_more_text {
+        font-family: Lato;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 28.8px;
+        text-align: center; /* Text alignment declared once */
+        color: #ACC2EE;
+     
     }
     
 }
 @media screen and (max-width:767px) and (min-width:320px) {
     .aboutus_container{
-        padding:80px 0px ;
+        padding:120px 0px ;
         height: 100vh;
     }
     .aboutus_inner_container{
@@ -160,9 +173,7 @@
         padding: 20px 30px;
     }
 
-    .aboutus_container{
-        padding: 50px 10px;
-    }
+    
     .about_us_know_more_text{
         font-size: 16px;
     }
