--- a/neural/src/Components/HomeComponents/Introduction/Introduction.css
+++ b/neural/src/Components/HomeComponents/Introduction/Introduction.css
@@ -25,12 +25,12 @@
 }
 .introduction_img{
   width:40%;
-
+  height: auto;
 
 }
 .introduction_img img{
   width:100%;
-  height:100%
+ 
 }
 .powering_transformation_with {
     font-size: 3.75em;
@@ -38,29 +38,18 @@
     text-align: left;
     font-family: "Lato", sans-serif;
     font-style: normal;
-    margin-bottom: 15px; 
     color:#4D658D;
-   
-    
-     
-    
   }
   .artificial_intelligence {
-    font-size: 90px;
+    font-size: 5.6rem;
     font-weight: 400;
     text-align: left;
     font-family: "Lato", sans-serif;
     font-style: normal;
     line-height: 120px;
     color: #1E3A5F;
-    
-    
-    
-    width: 100%;
-    
-   
+    width: 100%; 
   }
-
   .Introduction_description {
     font-family: Lato, sans-serif;
     font-size: 1.5em;
@@ -68,9 +57,7 @@
     line-height: 28.8px;
     text-align: left;
     color:#374357;
-    height: 50px;
-    
-    
+    height: 50px; 
   }
   .introduction_contact_us{
   width: 300px;
@@ -105,6 +92,9 @@ font-weight: 400;
       flex-direction: column-reverse;
       align-items: center; /* Center items horizontally */
       padding: 50px 0px;
+      justify-content: center;
+      height: auto;
+      
       }
 
 
@@ -119,13 +109,17 @@ font-weight: 400;
   }
 
   .introduction_img {
-      width: 80%; /* Adjust image width */
-      
-      height:600px ;
+      width: 60%; /* Adjust image width */
+      text-align: left;
+      height: auto;
    
-      margin-top: 10%!important;
-      margin-left: -10%;
      
+      
+     
+  }
+  .introduction_img img{
+    width:100%;
+    
   }
 
   .powering_transformation_with{
@@ -172,31 +166,19 @@ font-weight: 400;
     .introduction_container{
         margin: auto;
         flex-direction: column-reverse;
-        
         height: auto;
-        
-       
        }
      
        .introduction_img{
         width:100%;
-        margin-top: 0px;
-        
-        
-        
-       
-        
         
       }
-    
-      
      .introduction_inner_container{
-      
       width: 100%;
       padding: 0px;
      }
     .powering_transformation_with {
-        font-size: 1.25rem;
+        font-size: 1.4rem;
         font-weight: 400;
         letter-spacing: 0px;
         text-align: left;
@@ -204,14 +186,11 @@ font-weight: 400;
         font-style: normal;
         color:#4D658D;
         margin: auto;
-         
          width: 95%;
-         
         }
       
       .artificial_intelligence {
-      font-size: 1.5rem;
-      line-height: 40.8;
+       font-size: 2.0rem;
        width: 95%;
        margin: auto;
        letter-spacing: 1.2px;
@@ -219,31 +198,26 @@ font-weight: 400;
        font-family: Banumas;
        color: #1E3A5F;
        padding: 0px;
-       line-height: 30px;
-        
+       line-height: 30px; 
       }
       
       .Introduction_description {
         font-family: Baumans!important;
         font-size: 1em;
         font-weight: 400;
-        line-height: 28.8px;
+        line-height: 24px;
         text-align: left;
-        letter-spacing: 0px;
         margin-top: 16px!important; /* Add margin bottom to create space between text */
         color:#0F1C2E;
         width:95%;
-        margin: auto;
-       
-        
+        margin: auto;   
       }
       .introduction_contact_us{
         width: 160px;
-        height: 40px;
+        height: 35px;
         margin-left: 10px;
         gap: 0px;
         border: 1px 0px 0px 0px;
-      
         color:#0F1C2E
       }
       .introduction_contact_us_text{
@@ -251,8 +225,7 @@ font-weight: 400;
         font-size: 16px;
         line-height: 28.8;
          }
- 
-    
+   
 }
 @media screen and (max-width:320px) {
     .introduction_container{
@@ -323,7 +296,7 @@ font-weight: 400;
       }
       .introduction_contact_us{
         width: 160px;
-        height: 40px;
+        height: 30px;
         margin-left: 10px;
         gap: 0px;
         border: 1px 0px 0px 0px;
