--- a/neural/src/Pages/AboutUs/AboutUs.css
+++ b/neural/src/Pages/AboutUs/AboutUs.css
@@ -1,24 +1,34 @@
+.about_us_page{
 
+   
+   
+    scroll-snap-type: none;
+}
 
 .about_us_container{
   display: flex;
   justify-content: center;
-  align-items: center;
   color:#E0E0E0;
   background: linear-gradient(90deg, #203B60 0%, #4C648B 100%);
-
-  height:800px;
+  height:650px;
   margin-top:0px;
-
- 
-
+  
 }
 .about_us_inner_container{
-   width:60%;
+   width:80%;
    
+   margin-top: 6%;
+  
+  }
+  .about_us_inner_container_content{
+    width: 80%;
+    margin :auto
+  }
+  .about_us_inner_container_content{
+    width: 80%;
+    margin: auto;
 
-    
-}
+  }
 .about_us_our_team{
     font-family: Lato;
     font-size: 20px;
@@ -35,35 +45,38 @@
     font-weight: 400;
     line-height: 52px;
     text-align: left;
-    margin-top: -30px;
+    
     color:#CEE7FE;
-    margin-top: 20px;
+    
 
 
     
 }
 .about_us_our_team_description_context{
-    font-family: Baumans;
+    font-family: Lato;
     font-size: 18px;
     font-weight: 400;
     line-height: 23.64px;
     text-align: left;
     color:#ACC2EE;
     margin-top: 20px;
+    height: 50px;
 }
 
 .owner{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(4,1fr);
     justify-content: space-between;
     position: absolute;
     flex-wrap: wrap;
-
+    
     margin: auto;
     margin-top: 80px;
+    width:80%;
+    padding: 0px 20px;
   
-    width:60%;
-  
+    
+    
    
 }
 .owner_team{
@@ -75,6 +88,8 @@
     width: 250px;
     height: 400px;
     border-radius: 10px;
+
+   
  
 }
 
@@ -83,9 +98,18 @@
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    width:50%;
-    margin-top: -50px;
+    width:auto;
+   
 }
+.team_member{
+    font-family: Baumans;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 47.28px;
+    text-align: left;
+    color:#4D658D;
+   
+    }
 .owner_paragraph{
     font-size: 16px;
     color:#1E3A5F
@@ -94,23 +118,19 @@
     width: 20px!important;
     height: 20px!important;
     margin-top: 3px;
+    margin-left:10px;
+  
 }
-.team_member{
-font-family: Baumans;
-font-size: 20px;
-font-weight: 400;
-line-height: 47.28px;
-text-align: left;
-color:#4D658D
-}
+
 .employees {
     display: flex;
     flex-wrap: wrap; 
     justify-content: space-around; 
     align-items: center;
-    width: 95%;
+    width: 80%;
     margin: auto;
-    margin-top: 270px;
+    margin-top: 300px;
+   
    
 
 }
@@ -125,7 +145,7 @@ color:#4D658D
     height: 400px;
     border-radius: 10px;
     
-
+    
 
 }
 
@@ -136,13 +156,13 @@ color:#4D658D
 
 .description_of_desgination {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    width:100%;
+    width:auto;
     
-    padding: 0px;
-    margin-top: -50px;
 }
+
 .owner_team img,
 .employees_team img {
     width: 100%;
@@ -174,9 +194,7 @@ color:#4D658D
     border-radius: 10px;
     transition: border-radius .7s ease;
 }
-.btn_see_more:hover{
-    border-radius: 72px 0px 72px 0px;
-}
+
 @media screen and (max-width:1225px) and (min-width:1125px){
     .employees{
         margin-top: 600px;
@@ -186,7 +204,8 @@ color:#4D658D
 }
 @media screen and (max-width:1124px ) and (min-width:768px){
     .about_us_container{
-        height: 90%;
+        height: 600px;
+       
     }
     .about_us_our_team{
         font-size: 24px;
@@ -194,7 +213,11 @@ color:#4D658D
     .about_us_inner_container{
         width:80%;
         height: 400px;
+        
          
+     }
+     .about_us_inner_container_content{
+        width: 80%;
      }
     .about_us_our_team_description{
         font-family: Lato;
@@ -202,7 +225,7 @@ color:#4D658D
         font-weight: 400;
         line-height: 25px;
         text-align: left;
-      
+        margin-top: 0px;
         color:#CEE7FE
     }
     .about_us_our_team_description_context{
@@ -211,14 +234,14 @@ color:#4D658D
     .owner{
         display: grid;
         grid-template-columns: repeat(2,1fr);
-
+        
         
         
         width:75%
         
     }
     .employees-container{
-        margin-top: 800px;
+        margin-top: 600px;
     }
     .employees{
         margin-top: 500px;
@@ -229,23 +252,33 @@ color:#4D658D
 
     }
 }
+/* done */
 @media screen and (max-width:768px ) {
     .about_us_page{
         padding: 0px!important;
+        padding:80px 0px;
+        height: auto;
+      
     }
     .about_us_our_team{
         font-size: 24px;
+        margin-top: 30px;
     }
     .about_us_container{
         margin-top:-20px;
     
     }
     .about_us_inner_container{
-        width:80%;
-        margin-bottom: 120px;
+        width:90%;
+        
         
        
          
+     }
+     .about_us_inner_container_content{
+        width: 100%;
+        padding: 80px 0px!important;
+        
      }
     .about_us_our_team_description{
         font-family: Lato;
@@ -264,10 +297,13 @@ color:#4D658D
         display: grid;
         grid-template-columns: repeat(1,1fr);
         
-        margin-left: 0px;
+     
         position: absolute;
         width:90%;
-        margin-left: -30px;
+        margin-left: -10px;
+        
+        margin-top: -40px;
+        
         
     }
     .owner_team{
@@ -280,27 +316,18 @@ color:#4D658D
         height: auto;
     }
     .employees-container{
-        margin-top: 1000px;
-        border: 2px solid transparent;
+        margin-top: 1350px;
+        border: 1px solid transparent;
      
     }
     
     .employees_team{
-     
         width:90%;
         margin: auto;
-        height: auto;
-        margin-top: 20px;
+        
+        border: 400px;
        
     }
     
-    .description_of_desgination {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        width:95%;
-       
-        padding: 0px;
-        margin-top: -50px;
-    }
+  
 }
