--- a/neural/src/Pages/ContactUs/ContactUs.css
+++ b/neural/src/Pages/ContactUs/ContactUs.css
@@ -50,6 +50,7 @@ textarea::placeholder {
   color: #E0E0E0; /* Placeholder text color */
  
   text-indent: 20px; 
+  font-family: Lato, Arial, sans-serif;
 
 }
 textarea::placeholder{
@@ -87,7 +88,14 @@ margin-left: -50%;
     
 }
 .mobile_number_contact_us{
-    text-align: right;
+      text-align: right;
+    margin-top: 4px;
+    font-family: Lato;
+    font-weight: 400;
+    font-size: 14px;
+}
+.contact_button_div{
+    margin-top: 10px;
 }
 
 @media screen and (max-width:1124px ) and (min-width:768px){
@@ -157,7 +165,7 @@ margin-left: -50%;
 @media screen and (max-width:768px ) and (min-width:320px){
     .contact_us_container{
         flex-direction: column;
-        padding: 60px 30px;
+        padding: 20px 30px;
         justify-content: space-between;
       } 
     input{
@@ -209,6 +217,10 @@ margin-left: -50%;
             margin-top: 30px;
             
         }
+        .btn_contact_us{
+            margin: auto;
+        }
+      
     
 }
 @media screen and (max-width:320px ) {
