Change in the src file from random repo

--- a/neural/src/Components/LoaderPart/LoaderPart2.css
+++ b/neural/src/Components/LoaderPart/LoaderPart2.css
@@ -5,17 +5,12 @@
     --w: #fff;
   }
   
-  .loader2_main{
-    /* background: */
-  }
+
   .loader2_main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Adjust this value as needed */
-    /* background: linear-gradient(90deg, #203B60 0%, #4C648B 100%); */
-    /* ; */
-    ;
+    height: 100vh;
   }
   
   .ball {
