--- a/neural/src/Pages/AboutUs/AboutUs.css
+++ b/neural/src/Pages/AboutUs/AboutUs.css
@@ -1,7 +1,4 @@
 .about_us_page{
-
-   
-   
     scroll-snap-type: none;
 }
 
@@ -22,20 +19,18 @@
   }
   .about_us_inner_container_content{
     width: 80%;
-    margin :auto
+    margin :auto;
+   
+    margin-top: 45px;
   }
-  .about_us_inner_container_content{
-    width: 80%;
-    margin: auto;
-
-  }
+  
 .about_us_our_team{
     font-family: Lato;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 400;
     line-height: 72px;
     text-align: left;
-    color:#CEE7FE;
+    color:rgba(224,224,224);
     
     
 }
@@ -71,7 +66,7 @@
     flex-wrap: wrap;
     
     margin: auto;
-    margin-top: 80px;
+    margin-top: 60px;
     width:80%;
     padding: 0px 20px;
   
@@ -152,7 +147,6 @@
 .team_member {
     margin-top: 10px; /* Adjust space between image and text */
     text-align: center; /* Center text */
-    font-family: Lato;
 }
 
 .description_of_desgination {
@@ -221,6 +215,7 @@
      }
      .about_us_inner_container_content{
         width: 80%;
+        margin-top:0px;
      }
     .about_us_our_team_description{
         font-family: Lato;
@@ -264,8 +259,8 @@
       
     }
     .about_us_our_team{
-        font-size: 24px;
-        margin-top: 30px;
+        font-size: 20px;
+        margin-top: 28px;
     }
     .about_us_container{
         margin-top:-20px;
@@ -273,14 +268,12 @@
     }
     .about_us_inner_container{
         width:90%;
-        
-        
-       
-         
      }
+ 
      .about_us_inner_container_content{
         width: 100%;
         padding: 80px 0px!important;
+        margin-top: 0px;
         
      }
     .about_us_our_team_description{
