--- a/neural/src/Pages/ContactUs/ContactUs.css
+++ b/neural/src/Pages/ContactUs/ContactUs.css
@@ -16,7 +16,8 @@ font-size: 24px;
 font-weight: 400;
 line-height: 28.8px;
 text-align: left;
-color:#4D658D
+color:#4D658D;
+padding-bottom: 15px;
 }
 input{
 width: 400px;
@@ -24,7 +25,6 @@ height: 30px;
 
 gap: 0px;
 border:1px solid #374357;
-margin-top: 15px;
 
 
 }
@@ -94,10 +94,41 @@ margin-left: -50%;
     font-weight: 400;
     font-size: 14px;
 }
-.contact_button_div{
-    margin-top: 10px;
-}
+/* ContactUs.css */
 
+.input_group {
+    position: relative;
+  }
+  
+  .error {
+    border: 1px solid red;
+  }
+  
+  .error_mark {
+    color: red;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+   
+  }
+  .error_mark_textArea{
+    color: red;
+    position: absolute;
+    right: 10px;
+  }
+  .vibrate {
+    animation: vibrate 0.5s linear infinite ;
+  }
+
+  @keyframes vibrate {
+    0% { transform: translateX(0); }
+    25% { transform: translateX(-2px); }
+    50% { transform: translateX(2px); }
+    75% { transform: translateX(-2px); }
+    100% { transform: translateX(0); }
+  }
+  
 @media screen and (max-width:1124px ) and (min-width:768px){
     .contact_us_container{
     flex-direction: column;
