--- a/neural/src/index.css
+++ b/neural/src/index.css
@@ -1,16 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* :root{
+:root{
   scroll-snap-type:y mandatory;
-  scroll-padding-top:65px;
-  
+  scroll-padding-top:40px;
+  scroll-padding-bottom: -80px;
   scroll-snap-stop: always;
-} */
+}
 
-/* .about_us_page{
-  scroll-snap-type: none;
-} */
+
 
 
 @media (max-width: 768px) {
