Change a lots of code and make one file of color add top the root of main.css

--- a/neural/src/Components/Footer/Footer.css
+++ b/neural/src/Components/Footer/Footer.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 30px 123px;
-    background: linear-gradient(90deg, #203B60 0%, #4C648B 100%);
+    background:var(--background-color);
     height: auto;
   
 }
