--- a/neural/src/Components/HomeComponents/AboutUSComponents/AboutUsComponent.css
+++ b/neural/src/Components/HomeComponents/AboutUSComponents/AboutUsComponent.css
@@ -1,6 +1,6 @@
 .aboutus_container{
     height:100vh;
-    background: linear-gradient(90deg, #203B60 0%, #4C648B 100%);
+    background: var(--background-color);
    
     display: flex;
     justify-content: center;
