--- a/neural/src/Components/HomeComponents/Introduction/Introduction.css
+++ b/neural/src/Components/HomeComponents/Introduction/Introduction.css
@@ -38,7 +38,7 @@
     text-align: left;
     font-family: "Lato", sans-serif;
     font-style: normal;
-    color:#4D658D;
+    color:var(--introduction-heading-color);
   }
   .artificial_intelligence {
     font-size: 5.6rem;
@@ -47,7 +47,7 @@
     font-family: "Lato", sans-serif;
     font-style: normal;
     line-height: 120px;
-    color: #1E3A5F;
+    color:var(--introduction-sub-heading);
     width: 100%; 
   }
   .Introduction_description {
@@ -56,7 +56,7 @@
     font-weight: 400;
     line-height: 28.8px;
     text-align: left;
-    color:#374357;
+    color:var(--navbar-font-color);
     height: 50px; 
   }
   .introduction_contact_us{
@@ -65,7 +65,7 @@
   gap: 0px;
   border: 1px 0px 0px 0px;
  
-  border:1px solid #0F1C2E;
+  border:1px solid var( --case-study-border-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -184,7 +184,7 @@ font-weight: 400;
         text-align: left;
         font-family: "Lato", sans-serif;
         font-style: normal;
-        color:#4D658D;
+        color:var(--case-study-heading-color);
         margin: auto;
          width: 95%;
         }
@@ -196,7 +196,7 @@ font-weight: 400;
        letter-spacing: 1.2px;
        margin-top: 10px;
        font-family: Banumas;
-       color: #1E3A5F;
+       color: var(  --case-study-content-color);
        padding: 0px;
        line-height: 30px; 
       }
