--- a/neural/src/Components/HomeComponents/OurService/OurService.css
+++ b/neural/src/Components/HomeComponents/OurService/OurService.css
@@ -3,7 +3,7 @@
     height:100%;
     padding: 50px;
    
-    background: linear-gradient(90deg, #203B60 0%, #4C648B 100%);
+    background: var(--background-color);
     
 }
 .our_servive_heading{
@@ -25,7 +25,7 @@
 }
 
 .service_left_container{
-      background-color: #fff;
+      background-color: var(--our-service-content-background-color);
       height: 500px;
       padding: 50px;
       width: 45%;
